--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           Hey! My name is Vince and welcome to my portfolio!
         </span>
         <span>
-          I'm a Designer based in Sydney, Australia
+          It's still under Construction though...
         </span>
         <span>
           You can contact me here: <a href="#" class="a-text">j.vince.purba@gmail.com</a>
